--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,12 @@
-// Начните писать стили здесь
+@import "general/interface.less";
+@import "general/variables.less";
+@import "general/header.less";
+@import "index/main.less";
+@import "index/popular.less";
+@import "index/info.less";
+@import "index/reviews.less";
+@import "index/contact.less";
+@import "general/footer.less";
+@import "catalog/catalog.less";
+@import "catalog/production.less";
+@import "form/product.less";
