--- a/source/less/catalog/production.less
+++ b/source/less/catalog/production.less
@@ -1,7 +1,6 @@
 .production {
   padding: 0 30px;
   margin-bottom: 58px;
-
 }
 
 .production__title {
@@ -9,8 +8,8 @@
   align-items: center;
   justify-content: flex-start;
   padding: 21px 13px 26px 34px;
-  background-color: #FFFFFF;
-  border: 1px solid #ECECEC;
+  background-color: #ffffff;
+  border: 1px solid #ececec;
 }
 
 .production__title img {
@@ -18,23 +17,7 @@
 }
 
 .production__text {
-  border: 1px solid #ECECEC;
-
-  .text-production__video {
-    position: relative;
-  }
-
-  .text-production__video button {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    background-color: transparent;
-    border: none;
-    outline: none;
-  }
+  border: 1px solid #ececec;
 }
 
 .production__text p {
