--- a/source/less/general/interface.less
+++ b/source/less/general/interface.less
@@ -44,25 +44,25 @@ body {
 
 button {
   cursor: pointer;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 2px solid #444444;
 }
 
-h1 {
+.main__title {
   font-weight: @bold;
   font-size: 27px;
   line-height: 30px;
   color: #000000;
 }
 
-h2 {
+.block__title {
   font-weight: @bold;
   font-size: 25px;
   line-height: 30px;
   color: #000000;
 }
 
-h3 {
+.link-catalog__card-name {
   font-weight: @bold;
   font-size: 17px;
   line-height: 24px;
