--- a/source/less/index/contact.less
+++ b/source/less/index/contact.less
@@ -1,6 +1,6 @@
 .contact {
   padding: 38px 30px;
-  border-top: 1px solid #ECECEC;
+  border-top: 1px solid #ececec;
 }
 
 .contact__title {
@@ -34,7 +34,7 @@
 }
 
 .contact__table tr:first-child td:last-child {
-  border-bottom: 1px solid #62D1BA;
+  border-bottom: 1px solid #62d1ba;
 }
 
 .contact__map {
@@ -52,7 +52,7 @@
 }
 
 .contact__link {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 16px 38px;
   border: 2px solid #444444;
   display: block;
