--- a/source/less/index/popular.less
+++ b/source/less/index/popular.less
@@ -33,7 +33,7 @@
 }
 
 .popular__table tr {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 .popular__table tr td {
@@ -53,7 +53,7 @@
 }
 
 .popular button {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: 2px solid #444444;
   color: #444444;
   padding: 16px 80px;
