--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -42,7 +42,7 @@
 .reviews__arrow {
   padding: 12px 40px;
   border: none;
-  outline: 2px solid #ECECEC;
+  outline: 2px solid #ececec;
 }
 
 .reviews__button {
