--- a/source/less/general/footer.less
+++ b/source/less/general/footer.less
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,7 +23,7 @@
 }
 
 .footer hr {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   width: 260px;
   height: 1px;
   border: none;
