--- a/source/less/general/header.less
+++ b/source/less/general/header.less
@@ -1,33 +1,14 @@
 .header {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .header__logo {
   text-align: center;
   padding: 22px 0;
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
   position: relative;
 }
 
 .header__nav {
   display: none;
-
-  .nav__list {
-    text-align: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  .nav__item {
-    padding: 27px 0;
-  }
-
-  .nav__link {
-    font-weight: @bold;
-    font-size: 17px;
-    line-height: 24px;
-    color: #000000;
-    text-decoration: none;
-  }
 }
