--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -11,7 +11,7 @@
 }
 
 .main__title--background-grey {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   background-image: none;
   margin-top: 0;
   padding: 74px 0;
@@ -33,7 +33,7 @@
   font-weight: @bold;
   font-size: 19px;
   line-height: 24px;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   position: relative;
   display: flex;
@@ -58,4 +58,3 @@
     height: 60px;
   }
 }
-
