--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,24 @@
-@import "general/interface.less";
-@import "general/variables.less";
-@import "general/header.less";
-@import "index/main.less";
-@import "index/popular.less";
-@import "index/info.less";
-@import "index/reviews.less";
-@import "index/contact.less";
-@import "general/footer.less";
-@import "catalog/catalog.less";
-@import "catalog/production.less";
-@import "form/product.less";
+//General
+@import "./general/interface.less";
+@import "./general/variables.less";
+@import "./general/header.less";
+@import "./general/footer.less";
+@import "./general/nav.less";
+
+// Index
+@import "./index/main.less";
+@import "./index/popular.less";
+@import "./index/info.less";
+@import "./index/reviews.less";
+@import "./index/contact.less";
+
+// Catalog
+@import "./catalog/catalog.less";
+@import "./catalog/production.less";
+@import "./catalog/text-production.less";
+@import "./catalog/link-catalog.less";
+
+// Form
+@import "./form/product.less";
+@import "./form/product-form.less";
+@import "./form/filter-form.less";
