--- a/source/less/catalog/link-catalog.less
+++ b/source/less/catalog/link-catalog.less
@@ -7,6 +7,10 @@
 
 .link-catalog__card-name {
   margin-bottom: 5px;
+  font-weight: @bold;
+  font-size: 17px;
+  line-height: 24px;
+  color: #000000;
 }
 
 .link-catalog__card span {
