--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,8 @@
 @import "./general/header.less";
 @import "./general/footer.less";
 @import "./general/nav.less";
+@import "./general/modal.less";
+@import "./general/block.less";
 
 // Index
 @import "./index/main.less";
