--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -6,8 +6,12 @@
   background-position: center;
   background-size: cover;
 
-  padding: 90px 0 193px;
+  padding: 90px 30px 193px;
   margin-top: -17px;
+  font-weight: @bold;
+  font-size: 27px;
+  line-height: 30px;
+  color: #000000;
 }
 
 .main__title--background-grey {
@@ -27,6 +31,10 @@
 .main__item {
   background-color: @lg;
   padding: 24px 30px 31px;
+
+  &--dark {
+    background-color: #56c3b2;
+  }
 }
 
 .main__link {
@@ -56,5 +64,30 @@
     right: 0;
     width: 60px;
     height: 60px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .main__title {
+    text-align: center;
+
+    background-image: url("../img/index/hero-desktop.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    padding: 150px 0 372px;
+    margin-top: 0;
+  }
+
+  .main__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .main__item {
+    flex-basis: 50%;
   }
 }
