--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,26 @@
-// Начните писать стили здесь
+//General
+@import "./general/interface.less";
+@import "./general/variables.less";
+@import "./general/header.less";
+@import "./general/footer.less";
+@import "./general/nav.less";
+@import "./general/modal.less";
+@import "./general/block.less";
+
+// Index
+@import "./index/main.less";
+@import "./index/popular.less";
+@import "./index/info.less";
+@import "./index/reviews.less";
+@import "./index/contact.less";
+
+// Catalog
+@import "./catalog/catalog.less";
+@import "./catalog/production.less";
+@import "./catalog/text-production.less";
+@import "./catalog/link-catalog.less";
+
+// Form
+@import "./form/product.less";
+@import "./form/product-form.less";
+@import "./form/filter-form.less";
