--- a/source/less/catalog/production.less
+++ b/source/less/catalog/production.less
@@ -37,3 +37,22 @@
   padding: 18px 30px;
   display: block;
 }
+
+@media (min-width: 768px) {
+  .production {
+    padding: 0;
+  }
+
+  .production__title {
+    display: none;
+  }
+
+  .production__text {
+    border: none;
+  }
+
+  .production__text button {
+    max-width: 584px;
+    width: 100%;
+  }
+}
