--- a/source/less/form/product-form.less
+++ b/source/less/form/product-form.less
@@ -9,11 +9,11 @@
   .form__filter:not(:last-child) {
     margin-bottom: 30px;
   }
+}
 
-  span {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: #444444;
+@media (min-width: 768px) {
+  .product-form__user .form__filter {
+    display: flex;
+    flex-direction: row;
   }
 }
