--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,6 +13,8 @@
 @import "./index/info.less";
 @import "./index/reviews.less";
 @import "./index/contact.less";
+@import "./index/reviews-user.less";
+@import "./index/contact-map.less";
 
 // Catalog
 @import "./catalog/catalog.less";
