--- a/source/less/catalog/catalog.less
+++ b/source/less/catalog/catalog.less
@@ -15,3 +15,13 @@
 .catalog__link {
   text-decoration: none;
 }
+
+@media (min-width: 768px) {
+  .catalog {
+    padding: 30px 0 53px 0;
+  }
+
+  .catalog__item:not(:last-child) {
+    margin-bottom: 54px;
+  }
+}
