--- a/source/less/catalog/text-production.less
+++ b/source/less/catalog/text-production.less
@@ -13,3 +13,34 @@
   border: none;
   outline: none;
 }
+
+.text-production__title {
+  display: none;
+}
+
+.text-production__video-tablet {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .text-production__video-mobile {
+    display: none;
+  }
+
+  .text-production__video-tablet {
+    display: block;
+  }
+
+  .text-production__info {
+    border: 1px solid #eeeeee;
+  }
+
+  .text-production__title {
+    margin: 39px 42px;
+    display: flex;
+  }
+
+  .text-production__title img {
+    margin-right: 33px;
+  }
+}
