--- a/source/less/index/contact.less
+++ b/source/less/index/contact.less
@@ -37,25 +37,10 @@
   border-bottom: 1px solid #62d1ba;
 }
 
-.contact__map {
-  margin-left: -30px;
-  position: relative;
-}
-
-.contact__map img:last-child {
-  position: absolute;
-  top: -60px;
-  left: 50px;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-}
-
 .contact__link {
   background-color: #ffffff;
   padding: 16px 38px;
   border: 2px solid #444444;
-  display: block;
   text-align: center;
   color: #444444;
   text-decoration: none;
@@ -64,4 +49,31 @@
   font-size: 17px;
   line-height: 20px;
   margin-top: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .contact {
+    padding: 22px 0;
+    margin-top: 68px;
+  }
+
+  .contact__table {
+    margin-bottom: 49px;
+    width: 100%;
+  }
+
+  .contact__table tbody {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .contact__link {
+    padding: 14px 26px;
+    width: 230px;
+    margin: 55px auto 57px;
+  }
 }
