--- a/source/less/index/info.less
+++ b/source/less/index/info.less
@@ -69,3 +69,63 @@
 .info__item:not(:last-child) {
   margin-bottom: 32px;
 }
+
+
+@media (min-width: 768px) {
+  .info {
+    padding-top: 55px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .info__title {
+    margin-bottom: 41px;
+  }
+
+  .info__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .info__item {
+    flex-basis: 45%;
+
+    &--flower {
+      order: 1;
+    }
+
+    &--bill {
+      order: 3;
+    }
+
+    &--heart {
+      order: 5;
+    }
+
+    &--ball {
+      order: 2;
+    }
+
+    &--rocket {
+      order: 4;
+    }
+
+    &--gift {
+      order: 6;
+    }
+  }
+
+  .info__item:not(:nth-child(5)) {
+    margin-bottom: 60px;
+  }
+
+  .info__item:nth-child(3) {
+    margin-bottom: 83px;
+  }
+
+  .info__item:nth-child(6) {
+    margin-bottom: 83px;
+  }
+}
