--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -17,8 +17,12 @@
 .main__title--background-grey {
   background-color: #f1f1f1;
   background-image: none;
-  margin-top: 0;
-  padding: 74px 0;
+  padding: 101px 0 75px 0;
+  font-weight: @bold;
+  font-size: 27px;
+  line-height: 30px;
+  color: #000000;
+  text-align: center;
 }
 
 .main__list {
@@ -77,7 +81,19 @@
     background-size: cover;
 
     padding: 150px 0 372px;
-    margin-top: 0;
+    margin: 0 -50px;
+  }
+
+  .main__title--background-grey {
+    background-color: #f1f1f1;
+    background-image: none;
+    padding: 101px 0 75px 0;
+    font-weight: @bold;
+    font-size: 27px;
+    line-height: 30px;
+    color: #000000;
+    text-align: center;
+    margin: 0 -50px;
   }
 
   .main__list {
