--- a/source/less/index/popular.less
+++ b/source/less/index/popular.less
@@ -81,7 +81,7 @@
   .popular {
     display: flex;
     flex-direction: column;
-    padding: 40px 0 0 0;
+    padding: 40px 0 52px 0;
   }
 
   .popular__title {
