Адаптив каталог и форма

--- a/source/less/catalog/link-catalog.less
+++ b/source/less/catalog/link-catalog.less
@@ -73,5 +73,11 @@
   .link-catalog__card-price {
     margin-top: 0;
   }
-
 }
+
+@media (min-width: @desktop-width) {
+  .link-catalog__card {
+    height: 197px;
+  }
+}
+
