--- a/source/less/catalog/production.less
+++ b/source/less/catalog/production.less
@@ -56,3 +56,15 @@
     width: 100%;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .production__text p {
+    margin-left: 0;
+  }
+
+  .production__text button {
+    margin-left: 0;
+    max-width: 232px;
+    padding: 16px 0;
+  }
+}
