--- a/source/less/form/product.less
+++ b/source/less/form/product.less
@@ -121,3 +121,17 @@
     margin: 0;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .product__form-color .filter-form__list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .product__input {
+    width: 698px;
+    max-width: 698px;
+  }
+
+
+}
