--- a/source/less/index/contact-map.less
+++ b/source/less/index/contact-map.less
@@ -19,6 +19,10 @@
   display: none;
 }
 
+.contact-map__desktop {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .contact-map {
     margin: 0;
@@ -31,6 +35,17 @@
   .contact-map__tablet {
     display: block;
     margin-left: -50px;
+    position: relative;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contact-map__tablet {
+    display: none;
+  }
+
+  .contact-map__desktop {
+    display: block;
     position: relative;
   }
 }
