--- a/source/less/index/info.less
+++ b/source/less/index/info.less
@@ -129,3 +129,19 @@
     margin-bottom: 83px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .info {
+    padding: 68px 176px;
+  }
+
+  .info__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .info__item {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
