--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -62,3 +62,20 @@
     display: none;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .reviews {
+    margin: 0;
+    padding: 78px 0 96px 174px;
+  }
+
+  .reviews__title h2 {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .reviews p {
+    font-size: 17px;
+  }
+}
+
