--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,7 @@
 @import "./general/nav.less";
 @import "./general/modal.less";
 @import "./general/block.less";
+@import "./general/header-menu.less";
 
 // Index
 @import "./index/main.less";
@@ -15,6 +16,7 @@
 @import "./index/contact.less";
 @import "./index/reviews-user.less";
 @import "./index/contact-map.less";
+@import "./index/popular-desc.less";
 
 // Catalog
 @import "./catalog/catalog.less";
