--- a/source/less/catalog/catalog.less
+++ b/source/less/catalog/catalog.less
@@ -25,3 +25,26 @@
     margin-bottom: 54px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .catalog {
+    padding-top: 111px;
+  }
+
+  .catalog__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .catalog__link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .catalog__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
