--- a/source/less/general/header.less
+++ b/source/less/general/header.less
@@ -1,14 +1,58 @@
-.header {
-  background-color: #ffffff;
-}
-
 .header__logo {
   text-align: center;
-  padding: 22px 0;
-  border-bottom: 1px solid #ececec;
-  position: relative;
+  padding: 22px 30px;
+  z-index: -1;
+
+  &--tablet {
+    display: none;
+  }
+
+  &--desktop {
+    display: none;
+  }
 }
 
-.header__nav {
-  display: none;
+@media (min-width: 768px) {
+  .header__logo {
+    padding: 0;
+    // text-align: left;
+
+    &--mobile {
+      display: none;
+    }
+
+    &--tablet {
+      display: block;
+    }
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ececec;
+    margin: 0 -50px;
+    padding: 0 50px;
+    position: relative;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .header__logo {
+    position: absolute;
+    left: 0;
+    right: 0;
+
+    &--mobile {
+      display: none;
+    }
+
+    &--tablet {
+      display: none;
+    }
+
+    &--desktop {
+      display: block;
+    }
+  }
 }
