--- a/source/less/general/modal.less
+++ b/source/less/general/modal.less
@@ -46,6 +46,10 @@
   margin-bottom: 30px;
 }
 
+.modal__size button.modal__size--active {
+  border: 2px solid @lg;
+}
+
 .modal__size button {
   border: 2px solid rgba(68, 68, 68, 0.1);
   padding: 16px 33px;
@@ -66,4 +70,15 @@
   font-size: 17px;
   line-height: 16px;
   text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+  .modal {
+    min-width: 566px;
+    padding: 37px 102px 46px;
+  }
+
+  .modal__size button {
+    padding: 16px 48px;
+  }
 }
