--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -7,7 +7,6 @@
   background-size: cover;
 
   padding: 90px 30px 193px;
-  margin-top: -17px;
   font-weight: @bold;
   font-size: 27px;
   line-height: 30px;
@@ -105,5 +104,14 @@
 
   .main__item {
     flex-basis: 50%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main__title {
+    background-image: url("../img/index/hero-desktop-2.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 }
