--- a/source/less/index/popular.less
+++ b/source/less/index/popular.less
@@ -8,6 +8,7 @@
 
 .popular__title .block__title {
   margin-bottom: 3px;
+  z-index: 2;
 }
 
 .popular__title span {
@@ -16,27 +17,6 @@
   line-height: 20px;
   text-transform: uppercase;
   color: @lg;
-}
-
-.popular__desc {
-  display: flex;
-  flex-direction: column;
-}
-
-.popular__desc .popular__price {
-  order: 2;
-  margin-top: 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.popular__desc p {
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 24px;
-  color: #444444;
-  margin-top: 17px;
 }
 
 .popular__table {
@@ -82,6 +62,8 @@
     display: flex;
     flex-direction: column;
     padding: 40px 0 52px 0;
+    margin-top: 54px;
+    position: relative;
   }
 
   .popular__title {
@@ -95,5 +77,31 @@
   .popular__title span {
     max-width: 100px;
     text-align: center;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .popular {
+    padding: 69px 32px 96px;
+  }
+
+  .popular__title {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    max-width: 100%;
+  }
+
+  .popular__title h2 {
+    font-size: 53px;
+  }
+
+  .popular__title span {
+    margin-right: 43px;
+  }
+
+  .popular__table {
+    margin-top: 60px;
+    margin-bottom: 0;
   }
 }
