--- a/source/less/form/product-form.less
+++ b/source/less/form/product-form.less
@@ -9,4 +9,11 @@
   .form__filter:not(:last-child) {
     margin-bottom: 30px;
   }
+}
 
+@media (min-width: @tablet-width) {
+  .product-form__user .form__filter {
+    display: flex;
+    flex-direction: row;
+  }
+}
