--- a/source/less/general/block.less
+++ b/source/less/general/block.less
@@ -4,3 +4,18 @@
   line-height: 30px;
   color: #000000;
 }
+
+@media (min-width: @tablet-width) {
+  .block__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .block__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+}
+
