--- a/source/less/general/header-menu.less
+++ b/source/less/general/header-menu.less
@@ -151,6 +151,7 @@
 @media (min-width: @desktop-width) {
   .header-menu--desktop {
     display: block;
+    z-index: 2;
 
     .header-menu__list {
       display: flex;
