--- a/source/less/catalog/text-production.less
+++ b/source/less/catalog/text-production.less
@@ -13,3 +13,77 @@
   border: none;
   outline: none;
 }
+
+.text-production__title {
+  display: none;
+}
+
+.text-production__video-tablet {
+  display: none;
+}
+
+.text-production__video-desktop {
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .text-production__video-mobile {
+    display: none;
+  }
+
+  .text-production__video-tablet {
+    display: block;
+  }
+
+  .text-production__info {
+    border: 1px solid #eeeeee;
+  }
+
+  .text-production__title {
+    margin: 39px 42px;
+    display: flex;
+  }
+
+  .text-production__title img {
+    margin-right: 33px;
+  }
+
+  .text-production__title h3 {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .text-production__video-tablet {
+    display: none;
+  }
+
+  .text-production__video-desktop {
+    display: block;
+  }
+
+  .text-production {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .text-production__info {
+    padding: 43px 36px 60px 79px;
+  }
+
+  .text-production__info .order {
+    margin: 48px 0 0;
+  }
+
+  .text-production__title {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+  }
+
+  .text-production__title img {
+    margin-bottom: 27px;
+  }
+}
