--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,7 +6,7 @@
 @import "./general/nav.less";
 @import "./general/modal.less";
 @import "./general/block.less";
-
+@import "./general/header-menu.less";
 
 // Index
 @import "./index/main.less";
@@ -14,13 +14,15 @@
 @import "./index/info.less";
 @import "./index/reviews.less";
 @import "./index/contact.less";
+@import "./index/reviews-user.less";
+@import "./index/contact-map.less";
+@import "./index/popular-desc.less";
 
 // Catalog
 @import "./catalog/catalog.less";
 @import "./catalog/production.less";
 @import "./catalog/text-production.less";
 @import "./catalog/link-catalog.less";
-
 // Form
 @import "./form/product.less";
 @import "./form/product-form.less";
