Адаптивные декоративные элементы

--- a/source/less/index/contact-map.less
+++ b/source/less/index/contact-map.less
@@ -23,6 +23,11 @@
   display: none;
 }
 
+.contact-map iframe {
+  border: none;
+  display: block;
+}
+
 @media (min-width: 768px) {
   .contact-map {
     margin: 0;
