--- a/source/less/index/contact.less
+++ b/source/less/index/contact.less
@@ -1,6 +1,5 @@
 .contact {
   padding: 38px 30px;
-  border-top: 1px solid #ececec;
 }
 
 .contact__title {
@@ -59,10 +58,10 @@
   flex-direction: column;
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .contact {
     padding: 22px 0;
-    margin-top: 68px;
+    margin-top: 46px;
   }
 
   .contact__table {
@@ -102,7 +101,7 @@
 
 @media (min-width: @desktop-width) {
   .contact {
-    padding: 70px 0 0 173px;
+    padding: 70px 0 0 175px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 105px;
