--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -102,6 +102,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-top: -115px;
   }
 
   .main__item {
@@ -123,5 +124,13 @@
 
     font-size: 53px;
     line-height: 57px;
+    padding: 150px 0 433px;
+  }
+
+  .main__title--background-grey {
+    font-weight: 700;
+    font-size: 43px;
+    line-height: 50px;
+    padding: 101px 0 95px;
   }
 }
