--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -37,9 +37,8 @@
     background-image: url("../img/index/review.png");
     background-repeat: no-repeat;
     background-position: left;
-    margin-left: -50px;
     padding: 82px 0 47px 50px;
-    margin-top: 0;
+    margin: 0 0 68px -50px;
   }
 
   .reviews__title {
@@ -66,8 +65,8 @@
 
 @media (min-width: @desktop-width) {
   .reviews {
-    margin: 0;
-    padding: 78px 0 96px 174px;
+    margin: 0 0 70px 0;
+    padding: 78px 0 96px 175px;
   }
 
   .reviews__title h2 {
