--- a/source/less/index/popular.less
+++ b/source/less/index/popular.less
@@ -91,6 +91,7 @@
     flex-direction: row-reverse;
     justify-content: flex-end;
     max-width: 100%;
+    margin-bottom: 0;
   }
 
   .popular__title h2 {
