--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
 @import "./general/modal.less";
 @import "./general/block.less";
 @import "./general/header-menu.less";
+@import "./general/zigzag.less";
 
 // Index
 @import "./index/main.less";
