--- a/source/less/general/header-menu.less
+++ b/source/less/general/header-menu.less
@@ -107,7 +107,7 @@
 }
 
 .header-menu__item a {
-  font-weight: 700;
+  font-weight: bold;
   font-size: 17px;
   line-height: 24px;
   text-decoration: none;
