--- a/source/less/index/info.less
+++ b/source/less/index/info.less
@@ -1,6 +1,5 @@
 .info {
   padding: 31px 30px 0;
-  border-top: 1px solid #ececec;
 }
 
 .info__title {
@@ -70,3 +69,79 @@
   margin-bottom: 32px;
 }
 
+@media (min-width: @tablet-width) {
+  .info {
+    padding-top: 55px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .info__title {
+    margin-bottom: 41px;
+  }
+
+  .info__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .info__item {
+    flex-basis: 45%;
+    font-size: 20px;
+    line-height: 22px;
+
+    &--flower {
+      order: 1;
+    }
+
+    &--bill {
+      order: 3;
+    }
+
+    &--heart {
+      order: 5;
+    }
+
+    &--ball {
+      order: 2;
+    }
+
+    &--rocket {
+      order: 4;
+    }
+
+    &--gift {
+      order: 6;
+    }
+  }
+
+  .info__item:not(:nth-child(5)) {
+    margin-bottom: 60px;
+  }
+
+  .info__item:nth-child(3) {
+    margin-bottom: 83px;
+  }
+
+  .info__item:nth-child(6) {
+    margin-bottom: 83px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .info {
+    padding: 68px 175px;
+  }
+
+  .info__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .info__item {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
