--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -7,6 +7,10 @@
   margin-bottom: 14px;
 }
 
+.reviews__title .reviews__button {
+  display: none;
+}
+
 .reviews p {
   font-weight: 400;
   font-size: 15px;
@@ -25,3 +29,52 @@
   border: 2px solid #444444;
   text-transform: uppercase;
   display: block;
+  text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .reviews {
+    background-image: url("../img/index/review.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    padding: 82px 0 47px 50px;
+    margin: 0 0 68px -50px;
+  }
+
+  .reviews__title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
+
+  .reviews p {
+    margin-bottom: 60px;
+    font-size: 17px;
+  }
+
+  .reviews__title .reviews__button {
+    padding: 14px 35px;
+    display: block;
+  }
+
+  .reviews__button {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .reviews {
+    margin: 0 0 70px 0;
+    padding: 78px 0 96px 175px;
+  }
+
+  .reviews__title h2 {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .reviews p {
+    font-size: 17px;
+  }
+}
